update nextauth config

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,14 +11,17 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "14.2.5",
-    "next-auth": "^4.24.7",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@hour-tracker/database": "*",
     "@hour-tracker/types": "*",
-    "@hour-tracker/ui": "*"
+    "@hour-tracker/ui": "*",
+    "bcryptjs": "^3.0.3",
+    "next": "14.2.5",
+    "next-auth": "^5.0.0-beta.30",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
