--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,7 +19,8 @@
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.30",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.71.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
