--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "@hour-tracker/types": "*",
     "@hour-tracker/ui": "*",
     "bcryptjs": "^3.0.3",
+    "lucide-react": "^0.563.0",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.30",
     "react": "^18.3.1",
