--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,9 +20,12 @@
     "@hour-tracker/types": "*",
     "@hour-tracker/ui": "*",
     "bcryptjs": "^3.0.3",
+    "jspdf": "^4.1.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.563.0",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.30",
+    "papaparse": "^5.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.71.1",
@@ -32,6 +35,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.14.10",
+    "@types/papaparse": "^5.5.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.20",
