--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -2,15 +2,35 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "jsx": "preserve",
-    "plugins": [{ "name": "next" }],
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "@hour-tracker/database": ["../../packages/database/src"],
-      "@hour-tracker/types": ["../../packages/types/src"],
-      "@hour-tracker/ui": ["../../packages/ui/src"]
-    }
+      "@/*": [
+        "./src/*"
+      ],
+      "@hour-tracker/database": [
+        "../../packages/database/src"
+      ],
+      "@hour-tracker/types": [
+        "../../packages/types/src"
+      ],
+      "@hour-tracker/ui": [
+        "../../packages/ui/src"
+      ]
+    },
+    "isolatedModules": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
