add accountant reports

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,10 @@ AUTH_URL=http://localhost:3000
 
 # Redis
 REDIS_URL=redis://localhost:6379
+
+# Email (SendGrid)
+# SENDGRID_API_KEY=your-sendgrid-api-key
+# FROM_EMAIL=noreply@yourcompany.com
+
+# Cron (used to authenticate scheduled job requests)
+# CRON_SECRET=replace-with-a-random-secret
