--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,7 @@ REDIS_URL=redis://localhost:6379
 
 # Cron (used to authenticate scheduled job requests)
 # CRON_SECRET=replace-with-a-random-secret
+
+# Telegram Bot (for admin chat integration)
+# TELEGRAM_BOT_TOKEN=your-bot-token-from-botfather
+# ANTHROPIC_API_KEY=your-anthropic-api-key
