--- a/.env.example
+++ b/.env.example
@@ -16,5 +16,5 @@ REDIS_URL=redis://localhost:6379
 # CRON_SECRET=replace-with-a-random-secret
 
 # Telegram Bot (for admin chat integration)
-# TELEGRAM_BOT_TOKEN=your-bot-token-from-botfather
-# ANTHROPIC_API_KEY=your-anthropic-api-key
+# TELEGRAM_BOT_TOKEN=8579428371:AAGx_aBSkAqmGXYveTcfVER2S0q-3P5qIMQ
+# ANTHROPIC_API_KEY=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
